# medley-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/: __init__.py
data/metacognition/v1.0/: consensus_verification.json  consensus_verified_wrong.json  known_answers.json  metadata.json  selection_metadata.json
docs/: KAGGLE_DATASET_DESCRIPTION.md  PROVIDERS.md  REPRODUCING.md  SCORING.md
examples/: medley_bench_colab.ipynb  ollama_with_cloud_judge.py
kaggle_notebook/metacognition/: README.md  medley_bench_abilities.py  medley_bench_normal.py
src/: __init__.py
src/admin/: cli.py
src/admin/db/: export.py  models.py  schema.sql
src/admin/generation/: collect.py
src/admin/validation/: __init__.py
src/admin/web/: app.py
src/benchmark/: runner.py
src/benchmark/analysis/: __init__.py  factor_analysis.py
src/core/: __init__.py  db.py  metrics.py  parsing.py  providers.py
src/tracks/: __init__.py
src/tracks/metacognition/: __init__.py  seeds.py  tasks.py
tests/: conftest.py
tests/integration/: test_db_lifecycle.py  test_three_step_pipeline.py
tests/scoring_validation/: test_known_patterns.py  test_score_bounds.py  test_weight_constraints.py
tests/unit/test_core/: test_metrics.py  test_parsing.py
tests/unit/test_scoring/: test_computed_measures.py  test_instructional_instability.py  test_known_answer_scoring.py  test_private_vs_social_delta.py  (+1 more)
website/: data.html  index.html  leaderboard.html  llms.txt  manuscript.html  medley-bench-explorer.html  methodology.html  results.html
website/css/: style.css
(+45 files in other folders)
