[project]
name = "medley-bench"
version = "0.5.3"
description = "Behavioral metacognition benchmark under genuine inter-model disagreement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
medley-bench = "src.admin.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "data*"]

[tool.setuptools.package-data]
"data" = ["metacognition/v1.0/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "scoring_validation: scoring constraint validation",
    "slow: tests that call external APIs",
]
